# Nani

./: .gitignore  README.md  add_manga.py  nani.conf.ref  pyproject.toml  typo.conf.ref
nani/: __main__.py  furigana.py  render.py  templates.py
nani/commands/: category.py  command.py  gallery.py  help.py  refresh.py  template.py  util.py
nani/html/: __init__.py  calligraphy.py  games.py  html.py  manga.py  util.py
nani/resources/: retro_game.css.j2  scaled.css.j2  seal.css.j2
nani/resources/templates/calligraphy/: scroll-classic.json  scroll-cursive.json  scroll-wild.json  seal-bone.json  seal-modern.json
nani/resources/templates/games/: famicom-dragonquest.json
nani/resources/templates/manga/: citrus-yuzu-flustered.json  tomochan-what.json  yotsuba-gun.json  yotsuba-pray.json  yotsuba-shout.json
typewriter/: __main__.py  command.py  furigana.py  html.py  render.py  templates.py
typewriter/commands/: __init__.py
typewriter/render/: __init__.py  command.py  furigana.py  html.py  render.py
typewriter/render/resources/: style.css  style.css.j2
typewriter/resources/: calligraphy.css.j2  manga.css.j2
typewriter/resources/templates/: gintama-revolt.json  yotsuba-angry.json  yotsuba-impressed.json  yotsuba-phone.json  yotsuba-present.json  yotsuba-tantrum.json
typewriter/resources/templates/manga/: yotsuba-afraid.json  (+2 more)
typo/: __main__.py  command.py  furigana.py  html.py  render.py  templates.py  util.py
typo/commands/: __init__.py  category.py  help.py  template.py
typo/html/: __init__.py  calligraphy.py  html.py
typo/resources/: doFit.js
(+6 files in other folders)
